improved css gradient for n2show_maxHeight_truncated for Win Chrome but commented it all out due to Safari bugs

--- a/nunaliit2-js/src/main/webapp/nunaliit2/css/basic/n2.widget.css
+++ b/nunaliit2-js/src/main/webapp/nunaliit2/css/basic/n2.widget.css
@@ -388,7 +388,12 @@ Max Height Widget
 ==============================
 */
 .n2show_maxHeight_truncated {
-	-webkit-mask-image: -webkit-gradient(linear, left 85%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+/*
+	background: -linear-gradient(top, #000, #000 80%, #FFF);
+	background: -webkit-linear-gradient(top, #000, #000 80%, #FFF);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+*/
 }
 
 /* 
